fixed text overflow issue

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,7 +8,7 @@ body {
   padding: 0;
 }
 
-button{
+button {
   cursor: pointer;
 }
 
@@ -31,7 +31,11 @@ div#__layout {
   line-height: 28px;
   margin-bottom: 9px;
   text-transform: capitalize;
-  overflow-wrap: break-word;
+  word-wrap: break-word;
+  max-height: 56px;
+  overflow: hidden;
+  line-height: 28px;
+  text-overflow: ellipsis;
 }
 .card:nth-child(3n) {
   margin-right: 0;
@@ -54,7 +58,6 @@ div#__layout {
     border-radius: $border-radius;
     box-sizing: $box-sizing;
     resize: none;
-    
   }
 }
 
@@ -183,4 +186,3 @@ div#__layout {
     font-size: 14px;
   }
 }
-
